objects/Store__c.object
<CustomObject>
    <description>Contains the list of physical and ecommerce Dior stores.</description>
    <label>Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Store type (ex. retailer, ecommerce...). Alimented by Customer Inbound Flow. Values are as follows:
Distributeur : perfume retailer
Boutique: Dior store
Espace: corner in department stores/grands magasins
Institut : Institut Dior
E-commerce: ecommerce website</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Espace</fullName>
                </value>
                <value>
                    <fullName>Institut</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>RETAILER</fullName>
                    <label>Distributeur</label>
                </value>
                <value>
                    <fullName>Filiale</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
                <value>
                    <fullName>e-Wholesale</fullName>
                </value>
                <value>
                    <fullName>E-Concession</fullName>
                </value>
                <value>
                    <fullName>Final consumer</fullName>
                </value>
                <value>
                    <fullName>Staff sales</fullName>
                </value>
                <value>
                    <fullName>Independent store</fullName>
                </value>
                <value>
                    <fullName>E-retail</fullName>
                </value>
                <value>
                    <fullName>Chains of stores</fullName>
                </value>
                <value>
                    <fullName>E-Retail Self-Owned</fullName>
                </value>
                <value>
                    <fullName>Consignment</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Type__c</fullName>
        <label>POS Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <label>Retailer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Email__c</fullName>
        <label>Store Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store manager (as a Salesforce user). Is used for MyFeelBack in order to define Survey object visibility (Store owner can only see survey records related to the store(s) he is owner of). Manually alimented.</description>
        <label>Store Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Phone__c</fullName>
        <label>Store Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GPS_Latitude__c</fullName>
        <label>GPS Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_POS_Code__c</fullName>
        <label>SAP POS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPS_Longitude__c</fullName>
        <label>GPS Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Email_2__c</fullName>
        <label>Store Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Email_3__c</fullName>
        <label>Store Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Manager__c</fullName>
        <label>Store Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Store_Name__c</fullName>
        <formula>IF( NOT(ISBLANK( Local_store_name__c )) , Local_store_name__c, Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Store Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_store_name__c</fullName>
        <label>Local store name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Label_Value__c</fullName>
        <label>Group Label Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_External_Code__c</fullName>
        <externalId>true</externalId>
        <label>POS External Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Consolidated_ID__c</fullName>
        <externalId>true</externalId>
        <label>POS Consolidated ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InverseFirstLastName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inverse First Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activate_BC_Leave_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate BC Leave Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activate_Coolbe_Api_LineChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Coolbe Api LineChat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Segmentation_As_Loyalty_Program__c</fullName>
        <formula>IF(OR( ISPICKVAL(Market__c , &quot;IT&quot;),
ISPICKVAL(Market__c , &quot;NL&quot;),
ISPICKVAL(Market__c , &quot;DE&quot;),
ISPICKVAL(Market__c , &quot;LU&quot;),
ISPICKVAL(Market__c , &quot;NO&quot;),
ISPICKVAL(Market__c , &quot;DK&quot;),
ISPICKVAL(Market__c , &quot;SE&quot;),
ISPICKVAL(Market__c , &quot;FI&quot;),
ISPICKVAL(Market__c , &quot;CH&quot;),
ISPICKVAL(Market__c , &quot;VN&quot;),
ISPICKVAL(Market__c , &quot;IN&quot;),
ISPICKVAL(Market__c , &quot;PH&quot;)
),
TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Segmentation As Loyalty Program</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <validationRules>
        <fullName>No_Change_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00e09000001ULPy&quot;,
$Profile.Id &lt;&gt; &quot;00e09000000QmbF&quot;,
OR(
 ISCHANGED( Name ), ISCHANGED(CurrencyIsoCode)))</errorConditionFormula>
        <errorMessage>You can&apos;t change name of this record</errorMessage>
    </validationRules>
</CustomObject>